# multi-vehicle-coordination-algorithm

./: .gitignore  README.md  README_additions.md  TODO.txt  commit_and_push.sh  dmpc_container.Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  select_system.py
.github/workflows/: main.txt
coordination_/config/: settings.yaml
coordination_/scripts/: helpers.py
dmpc_planner/: CMakeLists.txt  dmpc_container.Dockerfile  generate_acados_solver.py  package.xml  pyproject.toml  scratch  setup.py
dmpc_planner/config/: settings.yaml
dmpc_planner/dmpc_planner/: generate_acados_solver.py  jetracersimulator_mpc.py
dmpc_planner/dmpc_planner/config/: settings.yaml
dmpc_planner/dmpc_planner_modules/: CMakeLists.txt
dmpc_planner/dmpc_planner_modules/scripts/: contouring.py  decomp_constraints.py
dmpc_planner/dmpc_planner_modules/src/: goal_module.cpp
dmpc_planner/install/: local_setup.sh  setup.sh
dmpc_planner/install/dmpc_planner/share/dmpc_planner/: package.bash  package.zsh
dmpc_planner/launch/: dmpc_planner.launch  dmpc_planner_debug.launch  dmpc_planner_debug_rviz.launch  jackalsimulator.launch  jackalsimulator_guidance.launch
dmpc_planner/log/: latest_build
dmpc_planner/mpc_planner_msgs/: CMakeLists.txt
dmpc_planner/mpc_planner_msgs/msg/: WeightArray.msg
dmpc_planner/planner/config/: settings.yaml
dmpc_planner/rviz/: demo.rviz  simulator.rviz
dmpc_planner/scripts/: contouring.py  contouring_spline.py  generate_jetracer_solver.py  generate_system_solver.py  helpers.py  jackalsimulator_guidance_mpc.py  jackalsimulator_mpc.py  jetracersimulator_mpc.py  mpc_controller.py  path_generator.py  project_trajectory.py  pyplot.py  run_dmpc.sh  scratch.py  setup.py  static_constraints.py  timer.py
dmpc_planner/solver_generator/: generate_solver.py  solver_model.py
dmpc_planner/solver_generator/util/: files.py  parameters.py
dmpc_planner/src/: contouring.py  generate_acados_solver.py
dmpc_planner_centralised/: CMakeLists.txt  package.xml  setup.py
dmpc_planner_centralised/config/: settings.yaml
dmpc_planner_centralised/launch/: debug_jetracer.launch  debug_rviz.launch  dmpc_planner_centralised.launch
dmpc_planner_centralised/scripts/: contouring_spline.py  generate_jetracer_solver.py  jetracersimulator_mpc.py  mpc_controller.py  path_generator.py  pyplot.py  run_dmpc.sh  static_constraints.py
dmpc_planner_decentralised/: CMakeLists.txt  package.xml
dmpc_planner_decentralised/config/: settings.yaml
dmpc_planner_decentralised/launch/: debug_jetracer.launch  debug_rviz.launch  dmpc_planner_debug_jetracer.launch  dmpc_planner_decentralised.launch
dmpc_planner_decentralised/rviz/: simulator.rviz
dmpc_planner_decentralised/scripts/: archive.rtf  contouring_spline.py  dual_initialiser.py  generate_CA_solver.py  generate_NMPC_solver.py  helpers.py  main.py  mpc_controller.py  path_generator.py  plot_utils.py  ros_mpc_controller.py  ros_visuals.py  run_dmpc.sh  scratch.py  scratch_rviz.py
docker-files/: dmpc_container.Dockerfile
modules/: CMakeLists_py.txt
modules/scripts/: goal_module.py  llm_module.py
mpc_planner_modules/: ca_distance.py  ca_objective.py  consensus_objective.py  contouring.py  contouring_constraints.py  goal_module.py  guidance_constraints.py  linearized_constraints.py  mpc_base.py  path_reference_velocity.py  polytopic_constraints.py  polytopic_dmin_constraints.py  polytopic_dmin_constraints_decent.py  polytopic_s_2_norm.py  polytopic_si_constraints.py  polytopic_sj_constraints.py  s_2_norm_constraints.py  scenario_constraints.py  setup.py
mpc_planner_msgs/: package.xml
mpc_planner_standalone/: CMakeLists.txt  package.xml
mpc_planner_standalone/config/: costmap_common_params.yaml  local_costmap_params.yaml  settings.yaml
mpc_planner_standalone/include/mpc_planner_standalone/: decomp_node.h
mpc_planner_standalone/launch/: decomp_node.launch
mpc_planner_standalone/src/: decomp_node.cpp
mpc_planner_standalone/srv/: decomp.srv
multi-vehicle-coordination-algorithm/: CMakeLists.txt  launch_wrapper.py  package.xml  setup.py
multi-vehicle-coordination-algorithm/config/: settings.yaml
multi-vehicle-coordination-algorithm/launch/: centralised_algorithm.launch  debug_algorithm.launch  debug_rviz.launch  distributed_algorithm.launch  multi-vehicle-coordination-algorithm.launch  multi_vehicle_coordination_algorithm.launch
multi-vehicle-coordination-algorithm/scripts/: main.py  path_generator.py
multi-vehicle-coordination-algorithm/scripts/centralised-algorithm/: generate_centralised_solver.py  generate_jetracer_solver.py  main.py  main_centralised.py  mpc_controller.py
multi-vehicle-coordination-algorithm/scripts/distributed-algorithm/: generate_CA_solver.py  generate_NMPC_solver.py  main_distributed.py  mpc_controller.py  ros_mpc_controller.py
multi_vehicle_coordination_algorithm/: CMakeLists.txt  launch_wrapper.py  package.xml  setup.py
multi_vehicle_coordination_algorithm/config/: settings.yaml
multi_vehicle_coordination_algorithm/config-rqt/: rqt_settings.cfg
multi_vehicle_coordination_algorithm/launch/: XXX_debug_algorithm.launch  centralised_algorithm.launch  debug_rviz.launch  distributed_algorithm.launch  multi_vehicle_coordination_algorithm.launch
multi_vehicle_coordination_algorithm/msg/: LambdaArrayList.msg
multi_vehicle_coordination_algorithm/rviz/: simulator.rviz
multi_vehicle_coordination_algorithm/scripts/: contouring_spline.py  dual_initialiser.py  helpers.py  path_generator.py  plot_utils.py  ros_visuals.py  scratch.py
multi_vehicle_coordination_algorithm/scripts/centralised-algorithm/: generate_centralised_solver.py  main_centralised.py  mpc_controller.py
multi_vehicle_coordination_algorithm/scripts/distributed-algorithm/: distance_plotter.py  generate_CA_solver.py  generate_NMPC_solver.py  main_distributed.py  mpc_controller.py  robot_node.py  ros_mpc_controller.py
solver_generator/: control_modules.py  generate_solver.py  setup.py  solver_definition.py  solver_model copy.py  solver_model.py  solver_model_appr_2.py  solver_model_old.py  spline.py
(+71 files in other folders)
