<?xml version="1.0"?>
<package format="2">
  <name>dmpc_planner</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="hubertv16@live.nl">hubert</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>rostest</test_depend>

  <export>
  </export>
</package>
