<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mpc_planner_standalone</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="groot.oscar.de@gmail.com">r2c1</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>mpc_planner_util</depend>
  <depend>mpc_planner_types</depend>
  <depend>ros_tools</depend>
  <depend>decomp_util</depend>
  <depend>tf</depend>
  <depend>costmap_2d</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>


  <export>
    <build_type>catkin</build_type>
  </export>
</package>
